[gd_scene load_steps=68 format=3 uid="uid://kfv0uffi3fyb"]

[ext_resource type="Texture2D" uid="uid://cmoxb8mymudca" path="res://Assets/Plants/Animations_Plant/EyeBomb/EyeBombDripBoom-Sheet.png" id="1"]
[ext_resource type="Texture2D" uid="uid://6wegh0y13r2" path="res://Assets/Plants/Animations_Plant/SummonAnim-Sheet.png" id="2"]
[ext_resource type="Script" uid="uid://722vcp81lh7t" path="res://Scripts/Plants/EyeBomb.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bpbrbhn6c2lom" path="res://Assets/Plants/TestBloodBSheet.png" id="4"]

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="51"]
atlas = ExtResource("1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="52"]
atlas = ExtResource("1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="53"]
atlas = ExtResource("1")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("1")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="55"]
atlas = ExtResource("1")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="56"]
atlas = ExtResource("1")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="57"]
atlas = ExtResource("1")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="58"]
atlas = ExtResource("1")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="60"]
atlas = ExtResource("1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="61"]
atlas = ExtResource("1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="62"]
atlas = ExtResource("1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="63"]
atlas = ExtResource("1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="64"]
atlas = ExtResource("1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="65"]
atlas = ExtResource("2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="66"]
atlas = ExtResource("2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="67"]
atlas = ExtResource("2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="68"]
atlas = ExtResource("2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="69"]
atlas = ExtResource("2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="70"]
atlas = ExtResource("2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="71"]
atlas = ExtResource("2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="72"]
atlas = ExtResource("2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="73"]
atlas = ExtResource("2")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="74"]
atlas = ExtResource("2")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="75"]
atlas = ExtResource("2")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="76"]
atlas = ExtResource("2")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="77"]
atlas = ExtResource("2")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="78"]
atlas = ExtResource("2")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="79"]
atlas = ExtResource("2")
region = Rect2(448, 0, 32, 32)

[sub_resource type="SpriteFrames" id="17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("49")
}, {
"duration": 1.0,
"texture": SubResource("50")
}, {
"duration": 1.0,
"texture": SubResource("51")
}, {
"duration": 1.0,
"texture": SubResource("52")
}, {
"duration": 1.0,
"texture": SubResource("53")
}, {
"duration": 1.0,
"texture": SubResource("54")
}, {
"duration": 1.0,
"texture": SubResource("55")
}, {
"duration": 1.0,
"texture": SubResource("56")
}, {
"duration": 1.0,
"texture": SubResource("57")
}, {
"duration": 1.0,
"texture": SubResource("58")
}],
"loop": false,
"name": &"boom",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("59")
}, {
"duration": 1.0,
"texture": SubResource("60")
}, {
"duration": 1.0,
"texture": SubResource("61")
}, {
"duration": 1.0,
"texture": SubResource("62")
}, {
"duration": 1.0,
"texture": SubResource("63")
}, {
"duration": 1.0,
"texture": SubResource("64")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("65")
}, {
"duration": 1.0,
"texture": SubResource("66")
}, {
"duration": 1.0,
"texture": SubResource("67")
}, {
"duration": 1.0,
"texture": SubResource("68")
}, {
"duration": 1.0,
"texture": SubResource("69")
}, {
"duration": 1.0,
"texture": SubResource("70")
}, {
"duration": 1.0,
"texture": SubResource("71")
}, {
"duration": 1.0,
"texture": SubResource("72")
}, {
"duration": 1.0,
"texture": SubResource("73")
}, {
"duration": 1.0,
"texture": SubResource("74")
}, {
"duration": 1.0,
"texture": SubResource("75")
}, {
"duration": 1.0,
"texture": SubResource("76")
}, {
"duration": 1.0,
"texture": SubResource("77")
}, {
"duration": 1.0,
"texture": SubResource("78")
}, {
"duration": 1.0,
"texture": SubResource("79")
}],
"loop": false,
"name": &"spawn",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="18"]
size = Vector2(78, 33)

[sub_resource type="CircleShape2D" id="19"]
radius = 68.0074

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("4")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("4")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("4")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("4")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("4")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("4")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("4")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("4")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("4")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("4")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("4")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("4")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("4")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("4")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("4")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("4")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("4")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("4")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("4")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("4")
region = Rect2(864, 0, 32, 32)

[sub_resource type="SpriteFrames" id="48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}, {
"duration": 1.0,
"texture": SubResource("40")
}, {
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}, {
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}, {
"duration": 1.0,
"texture": SubResource("47")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EyeBomb" type="Node2D" groups=["Plants"]]
script = ExtResource("3")
cost = 30
damage = 153

[node name="AnimSpriteComponent" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("17")
animation = &"boom"
autoplay = "spawn"
speed_scale = 2.0

[node name="DetectionComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionComponent"]
position = Vector2(1, -0.5)
shape = SubResource("18")

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("19")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(320, 0)
sprite_frames = SubResource("48")
frame = 16

[node name="PreviewNodes" type="Node2D" parent="."]
visible = false

[node name="SpriteComponent2" type="AnimatedSprite2D" parent="PreviewNodes"]
sprite_frames = SubResource("17")
frame = 3
speed_scale = 2.0

[connection signal="animation_finished" from="AnimSpriteComponent" to="." method="_on_SpriteComponent_animation_finished"]
[connection signal="frame_changed" from="AnimSpriteComponent" to="." method="_on_SpriteComponent_frame_changed"]
[connection signal="area_entered" from="DetectionComponent" to="." method="_on_DetectionComponent_area_entered"]
[connection signal="animation_finished" from="PreviewNodes/SpriteComponent2" to="." method="_on_SpriteComponent_animation_finished"]
